# gebeh

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  download-test-roms.sh  justfile
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: docker.yml  front.yml  publish.yml  rust.yml
boot-rom/: .gitignore  README.md  bootrom  cgb_boot.asm
gb-core/: Cargo.toml
gb-core/src/: cartridge.rs  cpu.rs  dma.rs  ic.rs  instructions.rs  lib.rs  ppu.rs  state.rs  timer.rs
gb-core/src/cpu/: mmu.rs  mod.rs
gb-core/src/mbc/: mod.rs
gb-core/src/ppu/: background_fetcher.rs  fifos.rs  ly_handler.rs  mod.rs  pixel_fetcher.rs  renderer.rs  sprite_fetcher.rs
gebeh-core/: Cargo.toml
gebeh-core/src/: addresses.rs  apu.rs  bus.rs  dma.rs  external_bus.rs  instructions.rs  interrupts.rs  joypad.rs  lib.rs  serial.rs  state.rs  timer.rs  wram.rs
gebeh-core/src/apu/: envelope.rs  length.rs  mod.rs  noise_channel.rs  prout.rs  pulse_channel.rs  sweep.rs  wave_channel.rs
gebeh-core/src/cells/: dffr.rs  drlatch_ee.rs  mod.rs  nor_latch.rs  tffnl.rs
gebeh-core/src/cpu/: bus.rs  execute_instruction.rs  instructions.rs  mmu.rs  mod.rs  speed_switch.rs
gebeh-core/src/mbc/: huc1.rs  m161.rs  mbc1.rs  mbc1m.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  tama5.rs  wisdom_tree.rs
gebeh-core/src/ppu/: background_fetcher.rs  color.rs  color_palettes.rs  dmg_mode.rs  fifos.rs  hdma.rs  ly_handler.rs  mod.rs  oam_dma.rs  object_priority_mode.rs  prout.rs  renderer.rs  scanline.rs  sprite.rs  sprite_fetcher.rs  stat_irq_handler.rs  vram.rs
gebeh-front-helper/: Cargo.toml
gebeh-front-helper/src/: lib.rs
gebeh-native/: Cargo.toml
gebeh-native/src/: emulator_loop.rs  main.rs
gebeh-network/: Cargo.toml
gebeh-network/src/: lib.rs  message.rs  synchro_cycles.rs
gebeh-server/: Cargo.toml
gebeh-server/src/: main.rs  service.rs
gebeh-system-verilog/: Cargo.toml
gebeh-system-verilog/src/: and.rs  ao22.rs  dffr.rs  dffr_cc.rs  drlatch_ee.rs  gate.rs  main.rs  nand.rs  nor.rs  nor_latch.rs  not.rs  or.rs  tffnl.rs
gebeh-test-roms/: big_serial.asm  build.sh  halt_lyc_palette_screen_edges.asm  halt_stat_mode_2_palette_screen_edges.asm  lyc_palette_screen_edges.asm  serial.asm  serial_master_overclock.asm  serial_master_transfer_timing.asm  serial_master_transfer_timing_int.asm  serial_no_transfer.asm  stat_mode_2_palette_screen_edges.asm
gebeh-web/: .gitignore  Cargo.toml  eslint.config.mjs  index.html  knip.json  manifest.json  package-lock.json  package.json  style.css  style.module.css  style.module.css.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.config.ts
gebeh-web/app/: app.tsx  bulma.scss  button.tsx  canvas.tsx  common.ts  dpad.tsx  environment.ts  gamepad-button.tsx  init-node.ts  main.tsx  rom-input.tsx  room.tsx  save-settings.tsx  saves.ts  style.module.css.d.ts  worklet.ts
gebeh-web/app/bulma/: button.tsx  file-input.tsx  modal.tsx  select.tsx  types.ts
gebeh-web/app/multiplayer/: room.tsx  webrtc.tsx  ws-helpers.ts  ws.tsx
gebeh-web/assets/: index.js
gebeh-web/polyfill/: TextEncoder.d.ts  TextEncoder.js
gebeh-web/prout/: app.tsx  button.tsx  buttons.ts  canvas.tsx  common.ts  dpad.tsx  index.ts  keyboard.ts  network.ts  rom-input.tsx  room.tsx  worklet.ts
gebeh-web/public/: env.js  manifest.json
gebeh-web/src/: initializer.mjs  lib.rs  main.rs  mbc.rs  message.rs  oscillator.rs  rtc.rs  wasm_audio.rs  worklet.js
gebeh-web/static/: gebeh-audio-processor.js  index.html
gebeh-web/tests/: app.rs
gebeh-web/ts/: buttons.ts  common.ts  index.ts  inputs.ts  keyboard.ts  network.ts  saves.ts  worklet.ts
gebeh-web/tsx/: app.tsx  button.tsx  common.ts  dpad.tsx  init-node.ts  room.tsx
macros/: Cargo.toml
macros/src/: lib.rs
my-lib/: Cargo.toml
my-lib/src/: lib.rs
src/: audio.rs  cartridge.rs  cpu.rs  dma.rs  emulator_loop.rs  gpu.rs  ic.rs  instructions.rs  lib.rs  main.rs  opcodes.rs  ppu.rs  ppu2.rs  state.rs  timer.rs
tests/: acid2.rs  acid2_expected.txt  blargg.rs  blargg_cpu_instrs.rs  blargg_dmg_sound.rs  home-made.rs  mealybug.rs  mealybug_cgb.rs  mooneye.rs  mooneye_acceptance.rs  mooneye_emulator_only.rs
tests/common/: mod.rs
