[workspace]
members = ["gebeh-core", "gebeh-front-helper", "gebeh-native", "gebeh-network", "gebeh-server", "gebeh-web"]

[package]
name = "gebeh"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gebeh-core = { path = "./gebeh-core" }
gebeh-front-helper = { path = "./gebeh-front-helper" }

[dev-dependencies]
arrayvec = "0.7.6"
png = "0.18.0"

[profile.release]
overflow-checks = true
lto = true

[profile.test]
opt-level = 3
