[workspace]
members = ["gebeh-core", "gebeh-front-helper", "gebeh-native", "gebeh-network", "gebeh-server", "gebeh-system-verilog", "gebeh-web"]

[package]
name = "gebeh"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
env_logger = "0.11.10"
gebeh-core = { path = "./gebeh-core" }
gebeh-front-helper = { path = "./gebeh-front-helper" }
log = "0.4.29"

[dev-dependencies]
arrayvec = "0.7.6"
png = "0.18.0"
gebeh-network = { path = "./gebeh-network" }

[profile.release]
overflow-checks = true
lto = true

[profile.test]
opt-level = 3
