[package]
name = "gebeh-native"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
color-eyre = "0.6.5"
gebeh-core = { path = "../gebeh-core" }
gebeh-front-helper = { path = "../gebeh-front-helper" }
gebeh = { path = ".." }
env_logger = "0.11.8"
winit = "0.29"
pixels = "0.15.0"
log = "0.4.29"
cpal = "0.17.0"
