[package]
name = "gebeh-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server"] }
hyper-util = "0.1.20"
tokio = { version = "1.49.0", features = ["net", "rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
