[package]
name = "gebeh-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
color-eyre = "0.6.5"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server"] }
hyper-util = "0.1.20"
tokio = { version = "1.49.0", features = ["net", "rt"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
