[package]
name = "gebeh-server"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
color-eyre = "0.6.5"
fastwebsockets = { version = "0.10.0", features = ["unstable-split", "upgrade"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http2"] }
hyper-util = { version = "0.1.20", features = ["service"] }
names = "0.14.0"
tokio = { version = "1.49.0", features = ["net", "rt"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "compression-zstd", "compression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
