# You must change these to your own details.
[package]
name = "gebeh-web"
description = "Web front of the gebeh emulator"
version = "0.1.0"
authors = ["Imran Tierce <imran.tierce@protonmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.45"
gebeh-core = { path = "../gebeh-core" }
gebeh-front-helper = { path = "../gebeh-front-helper" }
web-time = "1.1.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
