# You must change these to your own details.
[package]
name = "gebeh-web"
description = "Web front of the gebeh emulator"
version = "0.1.0"
authors = ["Imran Tierce <imran.tierce@protonmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.45"
gebeh-core = { path = "../gebeh-core" }
gebeh-front-helper = { path = "../gebeh-front-helper" }
gebeh-network = { path = "../gebeh-network" }
web-time = "1.1.0"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.29"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
